make LoveSong Game.

--- a/MADHeaven.vcxproj
+++ b/MADHeaven.vcxproj
@@ -143,13 +143,17 @@
     <ClCompile Include="Define.cpp" />
     <ClCompile Include="eScene.cpp" />
     <ClCompile Include="FpsControl.cpp" />
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="IOnSceneChangedListener.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Looper.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="OpeningScene.cpp" />
     <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Parameter.cpp" />
+    <ClCompile Include="SceneLoveSong.cpp" />
     <ClCompile Include="Singleton.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="SystemMain.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
@@ -158,12 +162,16 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="eScene.h" />
     <ClInclude Include="FpsControl.h" />
+    <ClInclude Include="Image.h" />
     <ClInclude Include="IOnSceneChangedListener.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Looper.h" />
+    <ClInclude Include="OpeningScene.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Parameter.h" />
+    <ClInclude Include="SceneLoveSong.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="SystemMain.h" />
     <ClInclude Include="TitleScene.h" />
   </ItemGroup>
