make Alice Scene.

--- a/MADHeaven.vcxproj
+++ b/MADHeaven.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Define.cpp" />
     <ClCompile Include="eScene.cpp" />
     <ClCompile Include="FpsControl.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="IOnSceneChangedListener.cpp" />
     <ClCompile Include="Keyboard.cpp" />
@@ -151,9 +152,12 @@
     <ClCompile Include="OpeningScene.cpp" />
     <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Parameter.cpp" />
+    <ClCompile Include="SceneAlice.cpp" />
     <ClCompile Include="SceneLoveSong.cpp" />
     <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="Sozai.cpp" />
+    <ClCompile Include="SozaiManager.cpp" />
     <ClCompile Include="SystemMain.cpp" />
     <ClCompile Include="TitleScene.cpp" />
   </ItemGroup>
@@ -162,6 +166,7 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="eScene.h" />
     <ClInclude Include="FpsControl.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="IOnSceneChangedListener.h" />
     <ClInclude Include="Keyboard.h" />
@@ -169,9 +174,12 @@
     <ClInclude Include="OpeningScene.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Parameter.h" />
+    <ClInclude Include="SceneAlice.h" />
     <ClInclude Include="SceneLoveSong.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Sound.h" />
+    <ClInclude Include="Sozai.h" />
+    <ClInclude Include="SozaiManager.h" />
     <ClInclude Include="SystemMain.h" />
     <ClInclude Include="TitleScene.h" />
   </ItemGroup>
