--- a/MADHeaven.vcxproj.filters
+++ b/MADHeaven.vcxproj.filters
@@ -126,6 +126,12 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="MIDI.cpp">
+      <Filter>ソース ファイル\System\Control</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneLightPlane.cpp">
+      <Filter>ソース ファイル\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleScene.h">
@@ -187,6 +193,12 @@
     </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="MIDI.h">
+      <Filter>ヘッダー ファイル\System\Control</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneLightPlane.h">
+      <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
