--- a/MADHeaven.vcxproj
+++ b/MADHeaven.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="AbstractScene.cpp" />
     <ClCompile Include="BackGround.cpp" />
+    <ClCompile Include="cursor.cpp" />
     <ClCompile Include="Define.cpp" />
     <ClCompile Include="eScene.cpp" />
     <ClCompile Include="FpsControl.cpp" />
@@ -157,6 +158,8 @@
     <ClCompile Include="SceneAlice.cpp" />
     <ClCompile Include="SceneLightPlane.cpp" />
     <ClCompile Include="SceneLoveSong.cpp" />
+    <ClCompile Include="SceneMainMenu.cpp" />
+    <ClCompile Include="SceneOption.cpp" />
     <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Sozai.cpp" />
@@ -167,6 +170,7 @@
   <ItemGroup>
     <ClInclude Include="AbstractScene.h" />
     <ClInclude Include="BackGround.h" />
+    <ClInclude Include="cursor.h" />
     <ClInclude Include="Define.h" />
     <ClInclude Include="eScene.h" />
     <ClInclude Include="FpsControl.h" />
@@ -182,6 +186,8 @@
     <ClInclude Include="SceneAlice.h" />
     <ClInclude Include="SceneLightPlane.h" />
     <ClInclude Include="SceneLoveSong.h" />
+    <ClInclude Include="SceneMainMenu.h" />
+    <ClInclude Include="SceneOption.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="Sozai.h" />
