--- a/MADHeaven.vcxproj
+++ b/MADHeaven.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Define.cpp" />
     <ClCompile Include="eScene.cpp" />
     <ClCompile Include="FpsControl.cpp" />
+    <ClCompile Include="gameIcon.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="IOnSceneChangedListener.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="Define.h" />
     <ClInclude Include="eScene.h" />
     <ClInclude Include="FpsControl.h" />
+    <ClInclude Include="gameIcon.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="IOnSceneChangedListener.h" />
