--- a/MADHeaven.vcxproj.filters
+++ b/MADHeaven.vcxproj.filters
@@ -73,6 +73,12 @@
     <Filter Include="ソース ファイル\GameObject\menu">
       <UniqueIdentifier>{5fcb1dd6-f23f-4b2c-88c2-336ca2cf2ddf}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Scene\SceneSonya">
+      <UniqueIdentifier>{0456a2be-8544-4e17-9b06-e6fbefa11e0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Scene\SceneSonya">
+      <UniqueIdentifier>{38e21e7b-b75e-41be-abcf-8f491a0060ef}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -163,7 +169,10 @@
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
     <ClCompile Include="VsSonya.cpp">
-      <Filter>ソース ファイル\Scene</Filter>
+      <Filter>ソース ファイル\Scene\SceneSonya</Filter>
+    </ClCompile>
+    <ClCompile Include="sideBlank.cpp">
+      <Filter>ソース ファイル\Scene\SceneSonya</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -252,7 +261,10 @@
       <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
     <ClInclude Include="VsSonya.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
+      <Filter>ヘッダー ファイル\Scene\SceneSonya</Filter>
+    </ClInclude>
+    <ClInclude Include="sideBlank.h">
+      <Filter>ヘッダー ファイル\Scene\SceneSonya</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
