--- a/MADHeaven.vcxproj.filters
+++ b/MADHeaven.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="sideBlank.cpp">
       <Filter>ソース ファイル\Scene\SceneSonya</Filter>
     </ClCompile>
+    <ClCompile Include="snowBall.cpp">
+      <Filter>ソース ファイル\Scene\SceneSonya</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleScene.h">
@@ -264,6 +267,9 @@
       <Filter>ヘッダー ファイル\Scene\SceneSonya</Filter>
     </ClInclude>
     <ClInclude Include="sideBlank.h">
+      <Filter>ヘッダー ファイル\Scene\SceneSonya</Filter>
+    </ClInclude>
+    <ClInclude Include="snowBall.h">
       <Filter>ヘッダー ファイル\Scene\SceneSonya</Filter>
     </ClInclude>
   </ItemGroup>
