--- a/MADHeaven.vcxproj.filters
+++ b/MADHeaven.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="BPMManager.cpp">
       <Filter>ソース ファイル\System</Filter>
     </ClCompile>
+    <ClCompile Include="SceneStarguitar.cpp">
+      <Filter>ソース ファイル\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleScene.h">
@@ -277,6 +280,9 @@
     </ClInclude>
     <ClInclude Include="BPMManager.h">
       <Filter>ヘッダー ファイル\System</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneStarguitar.h">
+      <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
